# ImageMosaicing

./: Readme.md
code/: CMakeLists.ini
code/MosaicingCode/: mosaic.sln
code/MosaicingCode/Debug/: mosaicing.exp  mosaicing.lib
code/MosaicingCode/Release/: mosaicing.exp  mosaicing.lib  tran0.txt
code/MosaicingCode/Release/feature_temp/: matchPairs.match  matchPairs.txt
code/MosaicingCode/mosaicing/: Basic.h  Bitmap.cpp  Bitmap.h  CManualResetEvent.cpp  CManualResetEvent.h  Convert.h  Filter.cpp  ImageFilter.h  ImageGeometry.cpp  ImageGeometry.h  ImageIO.cpp  ImageIO.h  ImageMath.cpp  LeastSquare.cpp  LeastSquare.h  Lock.h  MemoryPool.cpp  MemoryPool.h  Mosaic1By1.cpp  Mosaic1By1.h  MosaicImage.cpp  MosaicWithoutPos.cpp  MosaicWithoutPos.h  OutData.h  Point.h  ReadMe.txt  Similarity.h  Statistic.h  UsingCV.cpp  imageMath.h  matrix.h  mosaicimage.h  mosaicing.cpp  mosaicing.vcproj  mvMath.h  stdafx.cpp  test_cholmod.cpp  usingAtlImage.h  usingCV24.h  using_cholmod.h
code/mosaicing/: CMakeLists.txt  mosaicing.h
code/test/: CMakeLists.txt  test.cpp
